# bevy_tts

./: .drone.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix
.gitea/workflows/: release.yml  test.yml
.github/workflows/: test.yml
examples/: hello_world.rs
src/: lib.rs
