[package]
name = "bevy_tts"
version = "0.1.0"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "mit"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["speech_dispatcher_0_10", "tolk"]
speech_dispatcher_0_10 = ["tts/speech_dispatcher_0_10"]
tolk = ["tts/tolk"]

[dependencies]
bevy = { version = "0.7", default-features = false }
crossbeam-channel = "0.5"
tts = { version = "0.23", default-features = false }

[dev-dependencies]
bevy = { version = "0.7", default-features = true }