[package]
name = "bevy_tts"
version = "0.2.0"
description = "Text-to-speech for the Bevy game engine"
repository = "https://labs.lightsout.games/projects/bevy_tts"
authors = ["Nolan Darilek <nolan@thewordnerd.info>"]
license = "MIT OR Apache-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["speech_dispatcher_0_11", "tolk"]
speech_dispatcher_0_9 = ["tts/speech_dispatcher_0_9"]
speech_dispatcher_0_10 = ["tts/speech_dispatcher_0_10"]
speech_dispatcher_0_11 = ["tts/speech_dispatcher_0_11"]
tolk = ["tts/tolk"]

[dependencies]
bevy = { version = "0.9", default-features = false }
crossbeam-channel = "0.5"
tts = { version = "0.25", default-features = false }

[dev-dependencies]
bevy = { version = "0.9", default-features = true }

[package.metadata.release]
publish = false
push = false
pre-release-hook = ["git-cliff", "-o", "CHANGELOG.md", "--tag", "{{version}}"]
pre-release-commit-message = "Release"